--- a/09_kubernetes/mysql.yaml
+++ b/09_kubernetes/mysql.yaml
@@ -41,7 +41,7 @@ spec:
         tier: mysql
     spec:
       containers:
-      - image: mysql:5.6
+      - image: docker.io/dockerskoleni/mysql:5.6
         name: mysql
         env:
           # $ kubectl create secret generic mysql-pass --from-file=password.txt
