--- a/10_monitoring/docker-compose.yml
+++ b/10_monitoring/docker-compose.yml
@@ -11,7 +11,7 @@ networks:
 services:
 
   prometheus:
-    image: prom/prometheus:v2.1.0
+    image: docker.io/dockerskoleni/prometheus:v2.1.0
     volumes:
       - ./prometheus/:/etc/prometheus/
       - prometheus_data:/prometheus
@@ -36,7 +36,7 @@ services:
 #          - node.hostname == ${HOSTNAME}
 
   node-exporter:
-    image: prom/node-exporter
+    image: docker.io/dockerskoleni/node-exporter
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -55,7 +55,7 @@ services:
       mode: global
 
   alertmanager:
-    image: prom/alertmanager
+    image: docker.io/dockerskoleni/alertmanager
     ports:
       - 9093:9093
     volumes:
@@ -71,7 +71,7 @@ services:
 #        constraints:
 #          - node.hostname == ${HOSTNAME}
   cadvisor:
-    image: google/cadvisor
+    image: docker.io/dockerskoleni/cadvisor
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
@@ -86,7 +86,7 @@ services:
       mode: global
 
   grafana:
-    image: grafana/grafana
+    image: docker.io/dockerskoleni/grafana
     depends_on:
       - prometheus
     ports:
