--- a/10_monitoring/docker-stack.yml
+++ b/10_monitoring/docker-stack.yml
@@ -10,7 +10,7 @@ networks:
 services:
 
   prometheus:
-    image: prom/prometheus:v2.0.0
+    image: docker.io/dockerskoleni/prometheus:v2.1.0
     volumes:
       - ./prometheus/:/etc/prometheus/
       - prometheus_data:/prometheus
@@ -32,7 +32,7 @@ services:
           - node.hostname == ${HOSTNAME}
 
   node-exporter:
-    image: prom/node-exporter
+    image: docker.io/dockerskoleni/node-exporter
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -51,7 +51,7 @@ services:
       mode: global
 
   alertmanager:
-    image: prom/alertmanager
+    image: docker.io/dockerskoleni/alertmanager
     ports:
       - 9093:9093
     volumes:
@@ -68,7 +68,7 @@ services:
           - node.hostname == ${HOSTNAME}
 
   cadvisor:
-    image: google/cadvisor
+    image: docker.io/dockerskoleni/cadvisor
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
@@ -83,7 +83,7 @@ services:
       mode: global
 
   grafana:
-    image: grafana/grafana
+    image: docker.io/dockerskoleni/grafana
     depends_on:
       - prometheus
     ports:
