--- a/10_monitoring/pwd-stack.yml
+++ b/10_monitoring/pwd-stack.yml
@@ -13,7 +13,7 @@ networks:
 services:
 
   prometheus:
-    image: prom/prometheus:v2.0.0
+    image: docker.io/dockerskoleni/prometheus:v2.1.0
     volumes:
       - prometheus_config_data:/etc/prometheus/
       - prometheus_data:/prometheus
@@ -38,7 +38,7 @@ services:
           - node.hostname == ${HOSTNAME}
 
   node-exporter:
-    image: prom/node-exporter
+    image: docker.io/dockerskoleni/node-exporter
     volumes:
       - /proc:/host/proc:ro
       - /sys:/host/sys:ro
@@ -57,7 +57,7 @@ services:
       mode: global
 
   alertmanager:
-    image: prom/alertmanager
+    image: docker.io/dockerskoleni/alertmanager
     ports:
       - 9093:9093
     volumes:
@@ -73,7 +73,7 @@ services:
         constraints:
           - node.hostname == ${HOSTNAME}
   cadvisor:
-    image: google/cadvisor
+    image: docker.io/dockerskoleni/cadvisor
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
@@ -87,7 +87,7 @@ services:
     deploy:
       mode: global
   source:
-    image: containerize/git
+    image: docker.io/dockerskoleni/git
     environment: 
       - REPO_LOCAL=/data/git/repos/prometheus
       - REPO_BRANCH=version-2
@@ -98,7 +98,7 @@ services:
       - alertmanager_config_data:/data/git/repos/prometheus/alertmanager
 
   grafana:
-    image: grafana/grafana
+    image: docker.io/dockerskoleni/grafana
     depends_on:
       - prometheus
     ports:
